Fallout: built-in templates need transformer tags.
git-svn-id: https://saturnvalley.org/svn/alchemy/trunk@361 e8952cfc-6410-0410-bd16-81fef15e32ef

--- a/tex.tmpl
+++ b/tex.tmpl
@@ -1,3 +1,7 @@
+===default tex
+==section
+\chapter{$arg}
+==main
 \documentclass[12pt]{article}
 \usepackage{fullpage}
 \renewcommand{\rmdefault}{baskerville}
